# goptical

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  NEWS  README.md  cmake_install.cmake
cmake/: FindDime.cmake  FindGD.cmake  FindGSL.cmake  FindPLplot.cmake
doc/: conventions.mkdoc  description.mkdoc  headers.mkdoc  html_title.tmpl  intro.mkdoc  mkdoc.conf  modules.mkdoc  template.mkdoc  texinfo_head.tmpl  top.mkdoc  tutorial.mkdoc
doc/texinfo/: goptical.info  goptical.info-1  goptical.info-2  goptical.texi
examples/: CMakeLists.txt
examples/curve_model/: CMakeLists.txt  usercurve.cpp
examples/hierarchical_design/: CMakeLists.txt  newton.cpp
examples/render/: CMakeLists.txt  newton.hpp  opengl_app.cpp  x11_app.cpp
examples/render_3d/: CMakeLists.txt  app.hpp  newton.hpp
examples/segmented_mirror/: CMakeLists.txt  segmented.cpp
examples/simple_refractor/: CMakeLists.txt  refractor.cpp
examples/tessar_lens/: CMakeLists.txt  tessar.cpp
include/goptical/core/: Error  Makefile.am  Makefile.in  common.hpp  delegate  error.hpp  fstring  ref  vector_pool  vlarray
include/goptical/core/analysis/: Focus  Makefile.am  Makefile.in  PointImage  RayFan  Spot  focus.hpp  focus.hxx  pointimage.hpp  pointimage.hxx  rayfan.hpp  rayfan.hxx  spot.hpp  spot.hxx
include/goptical/core/curve/: Array  Base  Composer  Conic  ConicBase  Flat  Foucault  Grid  Makefile.am  Makefile.in  Parabola  Polynomial  Rotational  Sphere  Spline  Zernike  array.hpp  array.hxx  base.hpp  base.hxx  composer.hpp  composer.hxx  conic.hpp  conic.hxx  conic_base.hpp  conic_base.hxx  curve_roc.hpp  curve_roc.hxx  flat.hpp  flat.hxx  foucault.hpp  foucault.hxx  grid.hpp  grid.hxx  parabola.hpp  parabola.hxx  polynomial.hpp  polynomial.hxx  rotational.hpp  rotational.hxx  (+6 more)
include/goptical/core/data/: DiscreteSet  Grid  Makefile.am  Makefile.in  Plot  PlotData  SampleSet  Set  Set1d  data_interpolate_1d.hpp  data_interpolate_1d.hxx  discrete_set.hpp  discrete_set.hxx  grid.hpp  grid.hxx  plot.hpp  plot.hxx  plotdata.hpp  plotdata.hxx  sample_set.hpp  sample_set.hxx  set.hpp  set.hxx  set1d.hpp  set1d.hxx
include/goptical/core/io/: Export  Import  ImportOslo  ImportZemax  Makefile.am  Makefile.in  Renderer  Renderer2d  RendererAxes  RendererDxf  RendererGd  RendererOpengl  RendererPlplot  RendererSvg  RendererViewport  RendererX11  RendererX3d  Rgb  export.hpp  import.hpp  import_oslo.hpp  import_zemax.hpp  import_zemax.hxx  renderer.hpp  renderer.hxx  renderer_2d.hpp  renderer_2d.hxx  renderer_axes.hpp  renderer_axes.hxx  renderer_dxf.hpp  renderer_dxf.hxx  renderer_gd.hpp  renderer_gd.hxx  renderer_opengl.hpp  renderer_opengl.hxx  renderer_plplot.hpp  renderer_plplot.hxx  renderer_svg.hpp  renderer_svg.hxx  renderer_viewport.hpp  (+7 more)
include/goptical/core/light/: Makefile.am  Makefile.in  Ray  SpectralLine  ray.hpp  ray.hxx  spectral_line.hpp  spectral_line.hxx
include/goptical/core/material/: Abbe  Air  Base  Catalog  Conrady  Dielectric  DispersionTable  Herzberger  Makefile.am  Makefile.in  Metal  Mil  Mirror  Proxy  Schott  Sellmeier  SellmeierMod  Solid  Vacuum  abbe.hpp  abbe.hxx  air.hpp  air.hxx  base.hpp  base.hxx  catalog.hpp  catalog.hxx  conrady.hpp  conrady.hxx  dielectric.hpp  dielectric.hxx  dispersion_table.hpp  dispersion_table.hxx  herzberger.hpp  herzberger.hxx  metal.hpp  metal.hxx  mil.hpp  mil.hxx  mirror.hpp  (+13 more)
include/goptical/core/math/: Makefile.am  Makefile.in  Matrix  Quaternion  Transform  Triangle  Vector  VectorPair  matrix.hpp  matrix.hxx  quaternion.hpp  quaternion.hxx  transform.hpp  transform.hxx  triangle.hpp  triangle.hxx  vector.hpp  vector.hxx  vector_pair.hpp  vector_pair.hxx
include/goptical/core/shape/: Base  Composer  Disk  Ellipse  EllipticalRing  Infinite  Makefile.am  Makefile.in  Polygon  Rectangle  RegularPolygon  Ring  base.hpp  base.hxx  composer.hpp  composer.hxx  disk.hpp  disk.hxx  ellipse.hpp  ellipse.hxx  elliptical_ring.hpp  elliptical_ring.hxx  infinite.hpp  infinite.hxx  polygon.hpp  polygon.hxx  rectangle.hpp  rectangle.hxx  regular_polygon.hpp  regular_polygon.hxx  ring.hpp  ring.hxx  shape_round.hpp  shape_round.hxx
include/goptical/core/sys/: Container  Element  Group  Image  Lens  Makefile.am  Makefile.in  Mirror  OpticalSurface  Source  SourceDisk  SourcePoint  SourceRays  Stop  Surface  System  container.hpp  container.hxx  element.hpp  element.hxx  group.hpp  group.hxx  image.hpp  image.hxx  lens.hpp  lens.hxx  mirror.hpp  mirror.hxx  optical_surface.hpp  optical_surface.hxx  source.hpp  source.hxx  source_disk.hpp  source_disk.hxx  source_point.hpp  source_point.hxx  source_rays.hpp  source_rays.hxx  stop.hpp  stop.hxx  (+4 more)
include/goptical/core/trace/: #result.hpp#  .#result.hpp  Distribution  Params  Ray  Result  Sequence  Tracer  distribution.hpp  distribution.hxx  params.hpp  params.hxx  ray.hpp  ray.hxx  result.hpp  result.hxx  sequence.hpp  sequence.hxx  tracer.hpp  tracer.hxx
include/goptical/design/: common.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  analysis_focus.cpp  analysis_pointimage.cpp  analysis_rayfan.cpp  analysis_spot.cpp  curve_array.cpp  curve_base.cpp  curve_composer.cpp  curve_conic.cpp  curve_conic_base.cpp  curve_flat.cpp  curve_foucault.cpp  curve_grid.cpp  curve_parabola.cpp  curve_polynomial.cpp  curve_rotational.cpp  curve_sphere.cpp  curve_spline.cpp  curve_zernike.cpp  data_discrete_set.cpp  data_grid.cpp  data_interpolate_1d_.hxx  data_plot.cpp  data_sample_set.cpp  data_set.cpp  data_set1d.cpp  io_import_oslo.cpp  io_import_zemax.cpp  io_renderer.cpp  io_renderer_2d.cpp  io_renderer_axes.cpp  io_renderer_dxf.cpp  io_renderer_gd.cpp  io_renderer_opengl.cpp  io_renderer_plplot.cpp  io_renderer_svg.cpp  io_renderer_viewport.cpp  io_renderer_x11.cpp  io_renderer_x3d.cpp  io_rgb.cpp  (+47 more)
src/design/: CMakeLists.txt  telescope_cassegrain.cpp  telescope_newton.cpp
test/: CMakeLists.txt
test/core/: test_2d_plot.cpp  test_coordinates.cpp  test_discrete_set.cpp  test_materials.cpp  test_patterns.cpp  test_rendering.cpp  test_shapes.cpp
test/design/: test_cassegrain.cpp
(+9 files in other folders)
