# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/curve

pkginclude_HEADERS = Array Composer Conic ConicBase Base array.hpp      \
        array.hxx composer.hpp composer.hxx conic_base.hpp                \
        conic_base.hxx conic.hpp conic.hxx flat.hpp flat.hxx              \
        foucault.hpp foucault.hxx grid.hpp grid.hxx base.hpp base.hxx    \
        parabola.hpp parabola.hxx polynomial.hpp polynomial.hxx           \
        curve_roc.hpp curve_roc.hxx rotational.hpp rotational.hxx         \
        sphere.hpp sphere.hxx spline.hpp spline.hxx zernike.hpp            \
        zernike.hxx Flat Foucault Grid Parabola Polynomial Rotational   \
        Sphere Spline Zernike
