# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/data

pkginclude_HEADERS = discrete_set.hpp discrete_set.hxx grid.hpp           \
        grid.hxx data_interpolate_1d.hpp data_interpolate_1d.hxx         \
        plotdata.hpp plotdata.hxx plot.hpp plot.hxx sample_set.hpp         \
        sample_set.hxx set1d.hpp set1d.hxx set.hpp set.hxx DiscreteSet    \
        Grid Plot Plotdata SampleSet Set Set1d
