# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/io

pkginclude_HEADERS = Export Import ImportOslo ImportZemax export.hpp     \
        import.hpp import_oslo.hpp import_zemax.hpp import_zemax.hxx       \
        renderer_2d.hpp renderer_2d.hxx renderer_axes.hpp                 \
        renderer_axes.hxx renderer_dxf.hpp renderer_dxf.hxx              \
        renderer_gd.hpp renderer_gd.hxx renderer.hpp renderer.hxx         \
        renderer_opengl.hpp renderer_opengl.hxx renderer_plplot.hpp       \
        renderer_plplot.hxx renderer_svg.hpp renderer_svg.hxx            \
        renderer_viewport.hpp renderer_viewport.hxx renderer_x11.hpp      \
        renderer_x11.hxx renderer_x3d.hpp renderer_x3d.hxx rgb.hpp        \
        rgb.hxx Renderer Renderer2d RendererAxes RendererDxf            \
        RendererGd RendererOpengl RendererPlplot RendererSvg            \
        RendererViewport RendererX11 RendererX3d Rgb
