# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/material

pkginclude_HEADERS = Abbe Air Catalog Conrady Dielectric                \
        DispersionTable Herzberger Base abbe.hpp abbe.hxx air.hpp     \
        air.hxx catalog.hpp catalog.hxx conrady.hpp conrady.hxx           \
        dielectric.hpp dielectric.hxx dispersion_table.hpp                \
        dispersion_table.hxx herzberger.hpp herzberger.hxx base.hpp   \
        base.hxx metal.hpp metal.hxx mil.hpp mil.hxx mirror.hpp        \
        mirror.hxx proxy.hpp proxy.hxx schott.hpp schott.hxx              \
        sellmeier.hpp sellmeier.hxx sellmeiermod.hpp sellmeiermod.hxx     \
        solid.hpp solid.hxx vacuum.hpp vacuum.hxx Metal Mil Mirror        \
        Proxy Schott Sellmeier SellmeierMod Solid Vacuum
