# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/shape

pkginclude_HEADERS = Composer Disk Ellipse EllipticalRing Infinite      \
        Polygon Rectangle RegularPolygon Ring Base composer.hpp   \
        composer.hxx disk.hpp disk.hxx                 \
        ellipse.hpp ellipse.hxx elliptical_ring.hpp     \
        elliptical_ring.hxx base.hpp base.hxx                    \
        infinite.hpp infinite.hxx polygon.hpp           \
        polygon.hxx rectangle.hpp rectangle.hxx        \
        regular_polygon.hpp regular_polygon.hxx              \
        ring.hpp ring.hxx shape_round.hpp shape_round.hxx
