# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/<goptical/core/sys

pkginclude_HEADERS = Container Element Group Image Lens Mirror          \
        OpticalSurface Source SourcePoint SourceRays Stop Surface       \
        container.hpp container.hxx element.hpp               \
        element.hxx group.hpp group.hxx image.hpp         \
        image.hxx lens.hpp lens.hxx mirror.hpp            \
        mirror.hxx optical_surface.hpp optical_surface.hxx   \
        source.hpp source.hxx source_point.hpp                \
        source_point.hxx source_rays.hpp source_rays.hxx     \
        stop.hpp stop.hxx surface.hpp surface.hxx         \
        system.hpp system.hxx system
